@@ -1,3 +1,7 @@
+2003-05-27 Eric A. Welsh<ewelsh@ccb.wustl.edu>
+
+	* timidity/readmidi.c (parse_sysex_event_multi):
+	  Fix XG multipart SYSEX events
 
 2003-05-26  Saito <timidity@flashmail.com>
 
